[gd_scene load_steps=6 format=2]

[ext_resource path="res://Test/TestMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://Test/PathfindingTest.gd" type="Script" id=2]
[ext_resource path="res://Test/MapTestHUDCanvas.tscn" type="PackedScene" id=3]
[ext_resource path="res://BackgroundLayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://Test/TestCamera.tscn" type="PackedScene" id=5]

[node name="PathfindingTest" type="Node2D"]
script = ExtResource( 2 )

[node name="Map" parent="." instance=ExtResource( 1 )]

[node name="MapTestHUDCanvas" parent="." instance=ExtResource( 3 )]

[node name="ResourcesPanel" parent="MapTestHUDCanvas" index="3"]
visible = false

[node name="TurnPanel" parent="MapTestHUDCanvas" index="4"]
visible = false
margin_left = 123.053
margin_right = 220.053

[node name="NextTurn" parent="MapTestHUDCanvas" index="5"]
visible = false

[node name="PathfindingType" type="Button" parent="MapTestHUDCanvas"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -36.0
margin_right = 140.0
text = "Pathfinding to Hex"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundLayer" parent="." instance=ExtResource( 4 )]

[node name="TestCamera" parent="." instance=ExtResource( 5 )]
[connection signal="pressed" from="MapTestHUDCanvas/NewMapPanel/Remap2" to="." method="_on_Remap2_pressed"]
[connection signal="pressed" from="MapTestHUDCanvas/PathfindingType" to="." method="_on_PathfindingType_pressed"]

[editable path="MapTestHUDCanvas"]
